--- a/css/main.css
+++ b/css/main.css
@@ -8,3 +8,49 @@ html {
 *::after {
   box-sizing: inherit;
 }
+
+img {
+  width: 100%;
+  display: block;
+}
+
+section {
+  display: grid;
+grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+}
+
+.hover-box {
+  position: relative;
+  overflow: hidden;
+  text-decoration: none;
+  color: #fff;
+}
+
+.hover-box h2 {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 1rem;
+  margin: 0;
+  text-align: center;
+  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+  background-image: -o-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.9);
+  transition: all .2s linear;
+}
+
+.hover-box:hover h2,
+.hover-box:focus h2 {
+  bottom: 0;
+}
+
+.hover-box img{
+  filter: grayscale(100%);
+}
+
+.hover-box:hover img,
+.hover-box:focus img {
+  filter: grayscale(0);
+  transform: scale(1.1);
+}
