--- a/css/main.css
+++ b/css/main.css
@@ -28,14 +28,12 @@ grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 
 .hover-box h2 {
   position: absolute;
-  bottom: 0;
+  bottom: -4em;
   width: 100%;
   padding: 1rem;
   margin: 0;
   text-align: center;
-  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
-  background-image: -o-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.9);
   transition: all .2s linear;
 }
@@ -47,10 +45,17 @@ grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 
 .hover-box img{
   filter: grayscale(100%);
+  transition: all .2s linear;
 }
 
 .hover-box:hover img,
 .hover-box:focus img {
   filter: grayscale(0);
   transform: scale(1.1);
+}
+
+.hover-box-caption {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
+  text-shadow: 1px 1px 5px rbga(0, 0, 0, .9);
+  transition: all .2s linear;
 }
