--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ img {
 
 section {
   display: grid;
-grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 }
 
 .hover-box {
@@ -43,7 +43,7 @@ grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   bottom: 0;
 }
 
-.hover-box img{
+.hover-box img {
   filter: grayscale(100%);
   transition: all .2s linear;
 }
@@ -55,7 +55,7 @@ grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 }
 
 .hover-box-caption {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
-  text-shadow: 1px 1px 5px rbga(0, 0, 0, .9);
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.9);
   transition: all .2s linear;
 }
